@@ -1,0 +1,12 @@
+Metadata-Version: 1.0
+Name: mypackage
+Version: 0.1
+Summary: UNKNOWN
+Home-page: http://pypi.python.org/pypi/pkginfo
+Author: Tres Seaver
+Author-email: tseaver@palladion.com
+License: UNKNOWN
+Description: UNKNOWN
+Platform: UNKNOWN
+Classifier: Development Status :: 4 - Beta
+Classifier: Environment :: Console (Text Based)
