@@ -1,0 +1,4 @@
+mypackage README
+================
+
+Dummy package for testing ``pkginfo``.
